nav section is added

--- a/index.html
+++ b/index.html
@@ -1,13 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gammer</title>
+    <title>Gamer</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/responsive.css">
+    <link rel="shortcut icon" href="images/Frame.png" type="image/x-icon">
 </head>
+
 <body>
-    
+
+    <header>
+        <nav class="nav-container">
+            <div class="nav-title-container">
+                <img src="images/Frame.png" alt="">
+                <h1 class="nav-title"> <span class="nav-span">G</span>amer</h1>
+            </div>
+
+            <ul>
+                <li><a href="">About Us</a></li>
+                <li><a href="">Developers</a></li>
+                <li class="follow-on"><a href="">Follow On</a></li>
+            </ul>
+
+
+        </nav>
+
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
+
 </body>
+
 </html>
