banner section added

--- a/index.html
+++ b/index.html
@@ -32,6 +32,20 @@
 
     <main>
 
+        <!-- this is banner section  -->
+        <section class="banner-container">
+            <div class="banner-content">
+                <h2 class="banner-content-title">Play Like The</h2>
+                <h1 class="banner-goat">G.O.A.T.</h1>
+                <p class="banner-description"><img src="" alt="">1-Click instant play</p>
+                <p class="banner-description"><img src="" alt="">No Download</p>
+                <p class="banner-description"><img src="" alt="">1000s of supported online games</p>
+                <button class="btn-primary">Sign In</button>
+                <button class="btn-primary btn">Go Rogue</button>
+            </div>
+            <img class="tree" src="images/Group 18.png" alt="">
+        </section>
+
     </main>
 
     <footer>
