--- a/index.html
+++ b/index.html
@@ -46,6 +46,32 @@
             <img class="tree" src="images/Group 18.png" alt="">
         </section>
 
+        <!-- this is funny videos section -->
+        <section class="funny-videos-container">
+            <h3 class="video-title">Online Games <span>Funny Videos</span></h3>
+            <p class="video-description">A Collection of Hilarious Videos to Brighten Your Day</p>
+            <div class="video-image-container">
+                <div class="video-image">
+                    <img src="images/Rectangle 4.png" alt="">
+                    <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                </div>
+                <div class="video-image">
+                    <img src="images/Rectangle 5.png" alt="">
+                    <p>Did you score? #unblockedgames #school</p>
+                </div>
+                
+                <div class="video-image">
+                    <img src="images/Rectangle 7.png" alt="">
+                    <p>Breaking game records like OG</p>
+                </div>
+                <div class="video-image">
+                    <img src="images/Rectangle 6.png" alt="">
+                    <p>Busted gaming on school laptop, but you are still lit.</p>
+                </div>
+                
+            </div>
+        </section>
+
     </main>
 
     <footer>
