--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <img src="images/Rectangle 5.png" alt="">
                     <p>Did you score? #unblockedgames #school</p>
                 </div>
-                
+
                 <div class="video-image">
                     <img src="images/Rectangle 7.png" alt="">
                     <p>Breaking game records like OG</p>
@@ -68,7 +68,20 @@
                     <img src="images/Rectangle 6.png" alt="">
                     <p>Busted gaming on school laptop, but you are still lit.</p>
                 </div>
-                
+
+            </div>
+        </section>
+
+        <!-- play games online  -->
+        <section class="online-games-container">
+            <div>
+                <img class="large-pic" src="images/Rectangle 67.png" alt="">
+                <img class="small-pic" src="images/Rectangle 78.png" alt="">
+            </div>
+            <div class="online-games-content">
+                <h3 class="online-games-title"><span>Play Games Online</span> Anywhere, Anytime!</h3>
+                <p class="online-games-description">PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you
+                    can play your favorite games online for free, any time, anywhere , on any device.</p>
             </div>
         </section>
 
