footer section added

--- a/index.html
+++ b/index.html
@@ -88,6 +88,33 @@
     </main>
 
     <footer>
+        <div class="footer-title">
+            <img src="images/Frame.png" alt="">
+            <h1 class="nav-title"> <span class="nav-span">G</span>amer</h1>
+        </div>
+
+        <ul class="first-list">
+            <li>Our Story</li>
+            <li>Games</li>
+            <li>Web Games</li>
+            <li>Careers</li>
+            <li>Support</li>
+            <li>My Account</li>
+        </ul>
+        <div class="footer-icon">
+            <img src="images/fb.png" alt="">
+            <img src="images/twitter.png" alt="">
+            <img src="images/youtube.png" alt="">
+            <img src="images/linkedin-logo.png" alt="">
+        </div>
+        <ul class="second-list">
+            <li>Terms and Conditions</li>
+            <li>Privacy Policy</li>
+            <li>Cookie Policy</li>
+            <li>Privacy Settings</li>
+        </ul>
+        <p>Play Games &copy; Gamer &copy; 2000-2023 Gamer Bangladesh</p>
+
 
     </footer>
 
