--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
             <ul>
                 <li><a href="">About Us</a></li>
                 <li><a href="">Developers</a></li>
-                <li class="follow-on"><a href="">Follow On</a></li>
+                <li class="follow-on"><a href="">Follow On <img class="follow-on-image" src="images/youtube.png" alt="">
+                <img class="follow-on-image" src="images/tiktok.png" alt=""></a></li>
+                
             </ul>
 
 
