responsive added for mobile

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     </header>
 
-    <main>
+    <main >
 
         <!-- this is banner section  -->
         <section class="banner-container">
@@ -55,20 +55,20 @@
             <div class="video-image-container">
                 <div class="video-image">
                     <img src="images/Rectangle 4.png" alt="">
-                    <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                    <p>No Download. No Installs.</p>
                 </div>
                 <div class="video-image">
                     <img src="images/Rectangle 5.png" alt="">
-                    <p>Did you score? #unblockedgames #school</p>
+                    <p>Did you score?#school</p>
                 </div>
 
                 <div class="video-image">
                     <img src="images/Rectangle 7.png" alt="">
-                    <p>Breaking game records like OG</p>
+                    <p>Breaking game records like</p>
                 </div>
                 <div class="video-image">
                     <img src="images/Rectangle 6.png" alt="">
-                    <p>Busted gaming on school laptop, but you are still lit.</p>
+                    <p>Busted gaming on school.</p>
                 </div>
 
             </div>
@@ -88,7 +88,7 @@
         </section>
 
         <!-- this is game section  -->
-        <section class="game-container">
+        <section class="hide" class="game-container">
             <div class="game-image">
                 <img src="images/Rectangle 11.png" alt="">
                 <p>Action Games</p>
@@ -131,7 +131,7 @@
 
     </main>
 
-    <footer>
+    <footer class="hide">
         <div class="footer-title">
             <img src="images/Frame.png" alt="">
             <h1 class="nav-title"> <span class="nav-span">G</span>amer</h1>
