main section is upgrade for mobile

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </section>
 
         <!-- this is game section  -->
-        <section class="hide" class="game-container">
+        <section class="game-container">
             <div class="game-image">
                 <img src="images/Rectangle 11.png" alt="">
                 <p>Action Games</p>
