--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
     </main>
 
-    <footer class="hide">
+    <footer>
         <div class="footer-title">
             <img src="images/Frame.png" alt="">
             <h1 class="nav-title"> <span class="nav-span">G</span>amer</h1>
